# operations-debs-contenttranslation-apertium-srd

./: ACKNOWLEDGEMENTS  Makefile.am  README  apertium-srd.pc.in  apertium-srd.post-srd.dix  apertium-srd.srd.acx  apertium-srd.srd.dix  apertium-srd.srd.rlx  apertium-srd_0.10.0~r82237.orig.tar.bz2.delta  apertium-srd_0.10.0~r82237.orig.tar.bz2.id  apertium-srd_0.9.0~r72792.orig.tar.bz2.delta  apertium-srd_0.9.0~r72792.orig.tar.bz2.id  apertium-srd_1.2.0~r82994.orig.tar.bz2.delta  apertium-srd_1.2.0~r82994.orig.tar.bz2.id  configure.ac  modes.xml  srd-supervised.make  srd-unsupervised.make  test_verbs.bash
debian/: changelog  control
